# pathTracerNRC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
outputs/: pixelColor.hdr
scenes/: test.hdr
shaders/: raytracer.comp.glsl  raytracer.comp.glsl.spv
src/: CMakeLists.txt  main.cpp  utility.h
src/shaders/: raytracer.comp.glsl  raytracer.comp.glsl.spv
